# INE5653

./: .env  .gitignore  Cargo.toml  README.md
data/: db.json
locales/en-US/: main.ftl
locales/pt-BR/: main.ftl
src/: config.rs  db.rs  i18n.rs  lib.rs  main.rs  property.rs  routes.rs  server.rs
