[package]
name = "ine5653"
version = "0.1.0"
authors = ["Francisco Vicenzi", "Luis Oswaldo Ganoza"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "3.3.3"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
uuid = { version = "0.8.2", features = ["serde", "v4"] }