[package]
name = "ine5653"
version = "0.1.0"
authors = ["Francisco Vicenzi", "Luis Oswaldo Ganoza"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "3.3.3"
chrono = { version = "0.4.19", features = ["serde", "unstable-locales"] }
dotenv = "0.15.0"
fluent-templates = "0.6.1"
lazy_static = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
unic-langid = { version = "0.9.0", features = ["macros"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }